[workspace]
members = ["block_time", "hello_world", "priority_fees", "geo"]
resolver = "3"

[workspace.dependencies]
zela-std = { git = "https://github.com/Zela-io/zela-std.git", rev = "e5465e0e60ae6b690664408dbdd885fcdb867eab" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
log = { version = "0.4" }
